# portfolio

./: README.md
C#/: README.md
C#/2018.05.03 SW_DN_Editor/: UsbTest.sln
C#/2018.12.19 Serp_1.5/: UDP_FPGA.sln
Matlab/: README.md
Matlab/compare_GPS_RLI_VS_MK6/: 2020.10.01_14-24-47_Log.txt  ReadDataScript.m  output_data.txt  инструкция.txt
Matlab/receiverAFCMeasure/: Measures_Part2.mlapp  Postprocessing_Part2_chain.m  measures_part2_20001_1.mat  measures_part2_20001_2.mat  measures_part2_20001_3.mat  measures_part2_20001_4.mat  measures_part2_20002_1.mat  measures_part2_20002_2.mat  measures_part2_20002_3.mat  measures_part2_20002_4.mat
Matlab/receiverParasitesSearch/: Measures_Istok.mlapp  Postprocessing_Istok.m  results_istok_2_2.txt
Matlab/sensivity/: PostProcessingSensivity.fig  PostProcessingSensivity.m  TEM_KU_30_3000.mat  шум_TEM1п_экр.камера.mat  шум_ТЕМ1п_в поглотителе в лабортории.mat  шум_ТЕМ1п_усилитель_без_АЭ.mat
Python/: README.md
Python/netology_adpy_qualification/: README.md  bot_main.py  db.py  person.py  vk_bot.py  vk_classes.py
Python/netology_graduation/: README.md  db.sqlite3  requests_examples_common.http  requests_examples_for_buyers.http  requests_examples_for_shops.http  requirements.txt  schema.yml  tokens.py
Python/netology_python_beginner_qualifiction/: .gitignore  README.md  main.py  vk.py  yandex_disk.py
Python/telegram_ML_bot/: bot_config.py  bot_functions.py  echobot.py  main.py
Python/telegram_schedule_bot/: my_telebot.py
Python/test_ya_passport_login/: testing_yandex_passport_login.py
Python/web-scraping/: main.py
Qt/: README.md
Qt/BPLA/BPLA_test_1.15/: CMakeLists.txt  Makefile  TelemetryCtrl.pb.cc  TelemetryCtrl.pb.h  WaypointActionCtrl.pb.cc  WaypointActionCtrl.pb.h  cargo.cpp  cargo.h  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  protovar.h  tcpconnection.cpp  trackloader.cpp  trackloader.h  uav.cpp  uav.h  vectorTestClient.cbp  waypoint.cpp  waypoint.h
Qt/BPLA/BPLA_test_1.15/Proto/: TelemetryCtrl.proto  WaypointActionCtrl.proto
Qt/ModBusRotator/: ModBusRotator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbus.cpp  modbus.h  rotator.cpp  rotator.h
Qt/RLI_control/: RLI_json_loader.m
Qt/crc_checker/: log.txt  tele1.txt  tele1_log.txt  (+2 more)
(+99 files in other folders)
